--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,8 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+## Add ons to copied file
+
+*.log
+__pycache__
