Implemented read/write for shape encodings,
 implemented user input and main calculations with warnings for large input sizes.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-# Taken from https://github.com/github/gitignore/blob/main/Python.gitignore
+.vscode/
+encoding*
+__pycache__/
+*.log
+
+# The following was taken from https://github.com/github/gitignore/blob/main/Python.gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-.vscode/
 
 # C extensions
 *.so
